--- a/javaScript/js p9.css
+++ b/javaScript/js p9.css
@@ -12,5 +12,10 @@
 }
 
 #btn {
-    background-color: chocolate;
+    background-color: blue;
+    color: white;
+}
+
+.purple{
+    color: purple;
 }
