--- a/airbnb/views/listings/show.ejs
+++ b/airbnb/views/listings/show.ejs
@@ -2,7 +2,7 @@
 
 <div class="row mt-3">
     <div class="col-8 offset-3">
-        <h3>Listing details :-</h3>
+        <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card">
         <img
@@ -12,8 +12,6 @@
         />
         <div class="card-body">
             <p class="card-text">
-                <b><%= listing.title %></b>
-                <br />
                 <%=listing.description%>
                 <br />
                 &#8377;<%=listing.price.toLocaleString("en-IN")%>
@@ -27,10 +25,14 @@
 
     <br />
     <div class="btns offset-3">
-        <a href="/listings/<%=listing._id%>/edit" class="btn btn-dark submit-btn">Edit</a>
+        <a
+            href="/listings/<%=listing._id%>/edit"
+            class="btn btn-dark submit-btn"
+            >Edit</a
+        >
         &ThickSpace;
         <form method="POST" action="/listings/<%=listing._id%>?_method=DELETE">
-            <button class="btn btn-dark ">delete</button>
+            <button class="btn btn-dark">delete</button>
         </form>
     </div>
 </div>
