--- a/airbnb/views/listings/show.ejs
+++ b/airbnb/views/listings/show.ejs
@@ -35,4 +35,41 @@
             <button class="btn btn-dark">delete</button>
         </form>
     </div>
+
+    <div class="col-8 offset-3 mb-3 mt-3">
+        <hr />
+        <h4>Leave a Review</h4>
+        <form
+            action="/listings/<%=listing._id%>/reviews"
+            method="POST"
+            novalidate
+            class="needs-validation"
+        >
+            <div class="mt-3 mb-3">
+                <label for="rating" class="form-label">Rating</label>
+                <input
+                    type="range"
+                    min="1"
+                    max="5"
+                    id="rating"
+                    name="review[rating]"
+                />
+            </div>
+            <div class="mb-3">
+                <label for="comment" class="form-label">Comments</label><br />
+                <textarea
+                    name="review[comment]"
+                    id="comment"
+                    cols="38"
+                    rows="2"
+                    class="form-control"
+                    required
+                ></textarea>
+                <div class="invalid-feedback">
+                    Leave a comment on what you think
+                </div>
+            </div>
+            <button class="btn btn-outline-danger">Submit</button>
+        </form>
+    </div>
 </div>
