--- a/airbnb/views/listings/show.ejs
+++ b/airbnb/views/listings/show.ejs
@@ -39,8 +39,9 @@
     <div class="col-8 offset-3 mb-3 mt-3">
         <hr />
         <h4>Leave a Review</h4>
+        <!-- check for action route _id and id -->
         <form
-            action="/listings/<%=listing._id%>/reviews"
+            action="/listings/<%= listing.id %>/reviews"
             method="POST"
             novalidate
             class="needs-validation"
@@ -71,5 +72,14 @@
             </div>
             <button class="btn btn-outline-danger">Submit</button>
         </form>
+
+        <hr />
+
+        <h4>All Reviews</h4>
+        <ul>
+            <% for(review of listing.reviews) { %>
+            <li><%= review.comment %> ,<%= review.rating %> stars</li>
+            <% } %>
+        </ul>
     </div>
 </div>
