--- a/airbnb/views/listings/show.ejs
+++ b/airbnb/views/listings/show.ejs
@@ -4,7 +4,7 @@
     <div class="col-8 offset-3">
         <h3><%= listing.title %></h3>
     </div>
-    <div class="card col-6 offset-3 show-card">
+    <div class="card col-6 offset-3 show-card listing-card">
         <img
             src="<%=listing.image%>"
             class="show-img card-img-top"
@@ -75,11 +75,24 @@
 
         <hr />
 
-        <h4>All Reviews</h4>
-        <ul>
+        <p><b>All Reviews</b></p>
+        <div class="row">
             <% for(review of listing.reviews) { %>
-            <li><%= review.comment %> ,<%= review.rating %> stars</li>
+            <div class="card col-5 ms-3 mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">Emily Kaye</h5>
+                    <p class="card-text"><%= review.comment %></p>
+                    <p class="card-text"><b><%= review.rating %> Stars</b></p>
+                </div>
+                <form
+                    class="mb-3"
+                    method="POST"
+                    action="/listings/<%=listing._id%>/reviews/<%=review._id%>?_method=DELETE"
+                >
+                    <button class="btn btn-sm btn-dark">Delete</button>
+                </form>
+            </div>
             <% } %>
-        </ul>
+        </div>
     </div>
 </div>
