--- a/airbnb/views/listings/index.ejs
+++ b/airbnb/views/listings/index.ejs
@@ -1,29 +1,25 @@
 <% layout("/layouts/boilerplate.ejs") %>
-<body>
-    <h2>All Listings</h2>
-    <!-- Cards -->
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
-        <% for (let listing of allListings) { %>
-        <a href="/listings/<%=listing._id%>" class="listing-link">
-            <div class="card listing-card">
-                <img
-                    src="<%=listing.image%>"
-                    class="card-img-top"
-                    alt="listing_image"
-                    style="height: 20rem"
-                />
-                <div class="card-img-overlay"></div>
-                <div class="card-body">
-                    <p class="card-text">
-                        <b> <%=listing.title%> </b><br />
-                        <b>
-                            &#8377;<%=listing.price.toLocaleString("en-IN")%></b
-                        >
-                        night <br />
-                    </p>
-                </div>
+<h2>All Listings</h2>
+<!-- Cards -->
+<div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1">
+    <% for (let listing of allListings) { %>
+    <a href="/listings/<%=listing._id%>" class="listing-link">
+        <div class="card listing-card">
+            <img
+                src="<%=listing.image%>"
+                class="card-img-top"
+                alt="listing_image"
+                style="height: 20rem"
+            />
+            <div class="card-img-overlay"></div>
+            <div class="card-body">
+                <p class="card-text">
+                    <b> <%=listing.title%> </b><br />
+                    <b> &#8377;<%=listing.price.toLocaleString("en-IN")%></b>
+                    night <br />
+                </p>
             </div>
-        </a>
-        <% } %>
-    </div>
-</body>
+        </div>
+    </a>
+    <% } %>
+</div>
