--- a/airbnb/views/includes/navbar.ejs
+++ b/airbnb/views/includes/navbar.ejs
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"><i class="fa-solid fa-compass-drafting fa-lg"></i></a>
+        <a class="navbar-brand" href="#"
+            ><i class="fa-solid fa-compass-drafting fa-lg"></i
+        ></a>
         <button
             class="navbar-toggler"
             type="button"
@@ -14,6 +16,16 @@
                 <a class="nav-link" href="/listings">Home</a>
                 <a class="nav-link" href="/listings">All Listings</a>
                 <a class="nav-link" href="/listings/new">Add new Listing</a>
+            </div>
+            <div class="navbar-nav ms-auto">
+
+                <%if(!currUser) { %>
+                <a class="nav-link" href="/signup">Sign up</a>
+                <a class="nav-link" href="/login">Log in</a>
+                <% } %> <%if(currUser) { %>
+                <a class="nav-link" href="/logout">Log out</a>
+                <% } %>
+                
             </div>
         </div>
     </div>
