--- a/airbnb/views/listings/show.ejs
+++ b/airbnb/views/listings/show.ejs
@@ -11,19 +11,17 @@
             alt="listing_image"
         />
         <div class="card-body">
-            <p class="card-text">
-                <%=listing.description%>
-                <br />
-                &#8377;<%=listing.price.toLocaleString("en-IN")%>
-                <br />
-                <%=listing.location%>
-                <br />
-                <%=listing.country%>
-            </p>
+            <p class="card-text">Owned by <i><%=listing.owner.username%></i></p>
+            <p><%=listing.description%></p>
+            <p>&#8377;<%=listing.price.toLocaleString("en-IN")%></p>
+            <p><%=listing.location%></p>
+            <p><%=listing.country%></p>
         </div>
     </div>
 
     <br />
+
+    <% if(currUser && currUser._id.equals(listing.owner._id)) {%>
     <div class="btns offset-3">
         <a
             href="/listings/<%=listing._id%>/edit"
@@ -35,9 +33,10 @@
             <button class="btn btn-dark">delete</button>
         </form>
     </div>
-
+    <% } %>
     <div class="col-8 offset-3 mb-3 mt-3">
         <hr />
+        <% if(currUser) {%>
         <h4>Leave a Review</h4>
         <!-- check for action route _id and id -->
         <form
@@ -72,15 +71,14 @@
             </div>
             <button class="btn btn-outline-danger">Submit</button>
         </form>
-
-        <hr />
+        <% } %>
 
         <p><b>All Reviews</b></p>
         <div class="row">
             <% for(review of listing.reviews) { %>
             <div class="card col-5 ms-3 mb-3">
                 <div class="card-body">
-                    <h5 class="card-title">Emily Kaye</h5>
+                    <h5 class="card-title">@<%=review.author.username%></h5>
                     <p class="card-text"><%= review.comment %></p>
                     <p class="card-text"><b><%= review.rating %> Stars</b></p>
                 </div>
