--- a/airbnb/views/includes/navbar.ejs
+++ b/airbnb/views/includes/navbar.ejs
@@ -1,3 +1,25 @@
+<style>
+    .search-btn {
+        background-color: #fe424d;
+        color: white;
+        border-radius: 25px;
+        padding: 0 0.5rem 0 0.5rem;
+    }
+    .search-btn:hover {
+        background-color: #fe424d;
+        color: white;
+    }
+    .search-btn i{
+        display: inline;
+        padding-right: 0.5rem;
+    }
+    .search-inp{
+        border-radius: 25px;
+        padding: 0.5rem 3rem 0.5rem 3rem;
+        font-size: 1rem;
+    }
+</style>
+
 <nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
         <a class="navbar-brand" href="/listings"
@@ -11,10 +33,25 @@
         >
             <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" href="/listings">Explore</a>
             </div>
+
+            <div class="navbar-nav ms-auto">
+                <form class="d-flex" role="search">
+                    <input
+                        class="form-control me-2 search-inp"
+                        type="search"
+                        placeholder="Search destinations"
+                    />
+                    <button class="btn search-btn" type="submit">
+                        <i class="fa-solid fa-magnifying-glass"></i> Search
+                    </button>
+                </form>
+            </div>
+
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="/listings/new">Airbnb your home</a>
                 <%if(!currUser) { %>
@@ -23,7 +60,6 @@
                 <% } %> <%if(currUser) { %>
                 <a class="nav-link" href="/logout"><b>Log out</b></a>
                 <% } %>
-                
             </div>
         </div>
     </div>
