--- a/airbnb/views/includes/navbar.ejs
+++ b/airbnb/views/includes/navbar.ejs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-md bg-body-light border-bottom sticky-top bg-gray-500">
+    <div class="container-fluid bg-white">
         <a class="navbar-brand" href="/listings"
             ><i class="fa-solid fa-compass-drafting fa-lg"></i
         ></a>
